--- a/book.html
+++ b/book.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="Yaroslav Beskhlebnyi" content="author"/>
   <meta name="My favorite book" content="description"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
