--- a/handbook.html
+++ b/handbook.html
@@ -3,6 +3,7 @@
 	<head>
     <title>МІЙ ЕЛЕКТРОННИЙ ДОВІДНИК HTML</title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 	<table border="1" width="100%" cellspacing="0">
