add film.html page

--- a/book.html
+++ b/book.html
@@ -15,8 +15,8 @@
   </div>
   <img src="img/book_cover.jpeg" alt="book">
   <div class="bold">
-    <p>Назва книги:</b><a href="https://en.wikipedia.org/wiki/A_Wild_Sheep_Chase"> Охота на Овец</a></p>
-    <p>Aвтор:</b><a href="https://en.wikipedia.org/wiki/Haruki_Murakami"> Харукі Муракамі</a></p>
+    <p>Назва книги:<a href="https://en.wikipedia.org/wiki/A_Wild_Sheep_Chase"> Охота на Овец</a></p>
+    <p>Aвтор:<a href="https://en.wikipedia.org/wiki/Haruki_Murakami"> Харукі Муракамі</a></p>
   </div>
   <p><span class="bold">Жанр:</span> роман, антиутопія, ессе</p>
   <p><span class="bold">Рік першого видання:</span> 15 жовтня 1982</p>
