--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 </head>
 <h1><a href="book.html">My favorite book</a></h1>
 <h1><a href="film.html">My favorite film</a></h1>
-<h1><a href="handbook.html">My html handbook</a></h1>
+<h1><a href="html_handbook.html">My html handbook</a></h1>
 
