add some tags to html_handbook

--- a/html_handbook.html
+++ b/html_handbook.html
@@ -37,7 +37,7 @@
 			<td>Декларація повинна бути найпершою справою у вашому документі HTML перед тегом <html>.</td>
 		</tr>
 		<tr>
-			<td rowspan="7">Для роботи з текстом</td>
+			<td rowspan="8">Для роботи з текстом</td>
 			<td>&ltp&gt</td>
 			<td>Тег визначає абзац.</td>
 		</tr>
@@ -64,6 +64,10 @@
 		<tr>
 			<td>&ltsup&gt</td>
 			<td>Тег визначає текст верхнього індексу. Текст над текстом відображається наполовину символом вище звичайної лінії, а іноді відображається у меншому шрифті. Текст з написом може бути використаний для виносок, наприклад WWW <sup>[1]</sup>.</td>
+    </tr>
+    <tr>
+			<td>&ltbr&gt</td>
+			<td>Створює перехід на новий рядок. </td>
 		</tr>
 		<tr>
 			<td>Для гіперпосилань</td>
