--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@
 <h1><a href="book.html">My favorite book</a></h1>
 <h1><a href="film.html">My favorite film</a></h1>
 <h1><a href="html_handbook.html">My html handbook</a></h1>
+<h1><a href="css_handbook.html">My css handbook</a></h1>
 
