--- a/css_handbook.html
+++ b/css_handbook.html
@@ -8,116 +8,116 @@
 </head>
 <body>
     <table border="1">
-        <tr><th colspan="3">Мій електронний довідник</th></tr>
+        <tr><td colspan="3">Мій електронний довідник</td></tr>
         <tr>
             <th>Призначення</th>
             <th>Назва властивості</th>
             <th>Короткий опис</th>
         </tr>
         <tr>
-            <th rowspan="5">Для позіціювання обьєктів</th>
-            <th>top</th>
-            <th>Для позіціювання по верхній стороні</th>
+            <td rowspan="5">Для позіціювання обьєктів</td>
+            <td>top</td>
+            <td>Для позіціювання по верхній стороні</td>
         </tr>
         <tr>
-            <th>position</th>
-            <th>Для відображення блоку на сторінці</th>
+            <td>position</td>
+            <td>Для відображення блоку на сторінці</td>
         </tr>
         <tr>
-            <th>right</th>
-            <th>Для позіціювання по верхній стороні</th>
+            <td>right</td>
+            <td>Для позіціювання по верхній стороні</td>
         </tr>
         <tr>
-            <th>bottom</th>
-            <th>Для позіціювання по нижній стороні</th>
+            <td>bottom</td>
+            <td>Для позіціювання по нижній стороні</td>
         </tr>
         <tr>
-            <th>left</th>
-            <th>Для позіціювання по лівій стороні</th>
+            <td>left</td>
+            <td>Для позіціювання по лівій стороні</td>
         </tr>
         <tr>
-            <th rowspan="4">Для маніполювання блоками</th>
-            <th>margin</th>
-            <th>Зовнішній відступ</th>
+            <td rowspan="4">Для маніполювання блоками</td>
+            <td>margin</td>
+            <td>Зовнішній відступ</td>
         </tr>
         <tr>
-            <th>padding</th>
-            <th>Внутрішні відступи</th>
+            <td>padding</td>
+            <td>Внутрішні відступи</td>
         </tr>
         <tr>
-            <th>height</th>
-            <th>Задає висону блоку</th>
+            <td>height</td>
+            <td>Задає висону блоку</td>
         </tr>
         <tr>
-            <th>width</th>
-            <th>Задає ширину блоку</th>
+            <td>width</td>
+            <td>Задає ширину блоку</td>
         </tr>
         <tr>
-            <th rowspan="5">Для форматування блоків</th>
-            <th>color</th>
-            <th>Для надання кольору тексту</th>
+            <td rowspan="5">Для форматування блоків</td>
+            <td>color</td>
+            <td>Для надання кольору тексту</td>
         </tr>
         <tr>
-            <th>display</th>
-            <th>Задає поведінку блока</th>
+            <td>display</td>
+            <td>Задає поведінку блока</td>
         </tr>
         <tr>
-            <th>background</th>
-            <th>Для надання стилів тла</th>
+            <td>background</td>
+            <td>Для надання стилів тла</td>
         </tr>
         <tr>
-            <th>font</th>
-            <th>Для форматування тексту</th>
+            <td>font</td>
+            <td>Для форматування тексту</td>
         </tr>
         <tr>
-            <th>border</th>
-            <th>Для задання рамки</th>
+            <td>border</td>
+            <td>Для задання рамки</td>
         </tr>
         <tr>
-            <th rowspan="5">Псевдокласи та псевдоелементи</th>
-            <th>:link</th>
-            <th>Задає стилі для активованої ссилки</th>
+            <td rowspan="5">Псевдокласи та псевдоелементи</td>
+            <td>:link</td>
+            <td>Задає стилі для активованої ссилки</td>
         </tr>
         <tr>
-            <th>:hover</th>
-            <th>Задає стилі при наводі на елемент</th>
+            <td>:hover</td>
+            <td>Задає стилі при наводі на елемент</td>
         </tr>
         <tr>
-            <th>:first-child</th>
-            <th>Обрати перший дочірній елемент</th>
+            <td>:first-child</td>
+            <td>Обрати перший дочірній елемент</td>
         </tr>
         <tr>
-            <th>:last-child</th>
-            <th>Обрати останній дочірній елемаент</th>
+            <td>:last-child</td>
+            <td>Обрати останній дочірній елемаент</td>
         </tr>
         <tr>
-            <th>:nth-child()</th>
-            <th>Обрати конкретний елемент</th>
+            <td>:nth-child()</td>
+            <td>Обрати конкретний елемент</td>
         </tr>
         <tr>
-            <th rowspan="6">Для форматування тексту</th>
-            <th>text-align</th>
-            <th>Виравнювання тексту</th>
+            <td rowspan="6">Для форматування тексту</td>
+            <td>text-align</td>
+            <td>Виравнювання тексту</td>
         </tr>
         <tr>
-            <th>text-decoration</th>
-            <th>Оформлення тексту</th>
+            <td>text-decoration</td>
+            <td>Оформлення тексту</td>
         </tr>
         <tr>
-            <th>text-ident</th>
-            <th>Отступи параграфу</th>
+            <td>text-ident</td>
+            <td>Отступи параграфу</td>
         </tr>
         <tr>
-            <th>text-overflow</th>
-            <th>Стан тексту у блоцу</th>
+            <td>text-overflow</td>
+            <td>Стан тексту у блоцу</td>
         </tr>
         <tr>
-            <th>white-space</th>
-            <th>Відображення пробілів та переносів</th>
+            <td>white-space</td>
+            <td>Відображення пробілів та переносів</td>
         </tr>
         <tr>
-            <th>text-shadow</th>
-            <th>Тінь для тексту</th>
+            <td>text-shadow</td>
+            <td>Тінь для тексту</td>
         </tr>
     </table>
 </body>
